--- a/playground-unity/Packages/manifest.json
+++ b/playground-unity/Packages/manifest.json
@@ -39,5 +39,7 @@
     "com.unity.modules.wind": "1.0.0",
     "com.unity.modules.xr": "1.0.0"
   },
-	"testables": ["me.nadako.tinkstate"]
+  "testables": [
+    "me.nadako.tinkstate"
+  ]
 }
