--- a/src/TinkState-Model/Editor/Nadako.TinkState.Model.Editor.asmdef
+++ b/src/TinkState-Model/Editor/Nadako.TinkState.Model.Editor.asmdef
@@ -1,6 +1,3 @@
 ﻿{
-	"name": "Nadako.TinkState.Model.Editor",
-	"references": [
-		"Nadako.TinkState.Model"
-	]
+	"name": "Nadako.TinkState.Model.Editor"
 }
