--- a/src/TinkState-Model/Editor/Nadako.TinkState.Model.Editor.asmdef
+++ b/src/TinkState-Model/Editor/Nadako.TinkState.Model.Editor.asmdef
@@ -1,3 +1,8 @@
 ﻿{
-	"name": "Nadako.TinkState.Model.Editor"
+	"name": "Nadako.TinkState.Model.Editor",
+	"overrideReferences": true,
+	"precompiledReferences": [
+		"Mono.Cecil.dll",
+		"Mono.Cecil.Rocks.dll"
+	]
 }
