--- a/projects/TinkState-Model/TinkState-Model.csproj
+++ b/projects/TinkState-Model/TinkState-Model.csproj
@@ -12,4 +12,8 @@
 		<Compile Include="../../src/TinkState-Model/Runtime/**/*.cs"/>
 	</ItemGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="../TinkState/TinkState.csproj"/>
+	</ItemGroup>
+
 </Project>
