Align assembly names
Should probably do some more renaming later.

--- a/projects/TinkState-Model-Weaver/TinkState-Model-Weaver.csproj
+++ b/projects/TinkState-Model-Weaver/TinkState-Model-Weaver.csproj
@@ -3,7 +3,9 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>9.0</LangVersion>
+		<AssemblyName>Nadako.TinkState.Model.Weaver</AssemblyName>
 	</PropertyGroup>
+
 	<PropertyGroup>
 		<EnableDefaultItems>false</EnableDefaultItems>
 	</PropertyGroup>
