--- a/projects/TinkState-Model-Weaver-Unity/TinkState-Model-Weaver-Unity.csproj
+++ b/projects/TinkState-Model-Weaver-Unity/TinkState-Model-Weaver-Unity.csproj
@@ -3,7 +3,9 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>9.0</LangVersion>
+		<AssemblyName>Unity.TinkState.Model.CodeGen</AssemblyName>
 	</PropertyGroup>
+
 	<PropertyGroup>
 		<EnableDefaultItems>false</EnableDefaultItems>
 	</PropertyGroup>
