--- a/projects/TinkState-Model/TinkState-Model.csproj
+++ b/projects/TinkState-Model/TinkState-Model.csproj
@@ -3,6 +3,7 @@
 	<PropertyGroup>
 		<TargetFramework>net6.0</TargetFramework>
 		<LangVersion>9.0</LangVersion>
+		<AssemblyName>Nadako.TinkState.Model</AssemblyName>
 	</PropertyGroup>
 	<PropertyGroup>
 		<EnableDefaultItems>false</EnableDefaultItems>
