--- a/projects/TinkState/TinkState.csproj
+++ b/projects/TinkState/TinkState.csproj
@@ -1,16 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <LangVersion>9.0</LangVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<LangVersion>9.0</LangVersion>
+		<AssemblyName>Nadako.TinkState</AssemblyName>
+	</PropertyGroup>
 
 	<PropertyGroup>
-    <EnableDefaultItems>false</EnableDefaultItems>
-  </PropertyGroup>
+		<EnableDefaultItems>false</EnableDefaultItems>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Include="../../src/TinkState/Runtime/**/*.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Include="../../src/TinkState/Runtime/**/*.cs"/>
+	</ItemGroup>
 
 </Project>
