--- a/projects/TinkState-Test/TinkState-Test.csproj
+++ b/projects/TinkState-Test/TinkState-Test.csproj
@@ -1,28 +1,29 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <LangVersion>9.0</LangVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<LangVersion>9.0</LangVersion>
+		<AssemblyName>Nadako.TinkState.Tests</AssemblyName>
+	</PropertyGroup>
 
 	<PropertyGroup>
-    <EnableDefaultItems>false</EnableDefaultItems>
-  </PropertyGroup>
+		<EnableDefaultItems>false</EnableDefaultItems>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <Compile Include="../../src/TinkState/Tests/**/*.cs" />
-  </ItemGroup>
+	<ItemGroup>
+		<Compile Include="../../src/TinkState/Tests/**/*.cs"/>
+	</ItemGroup>
 
-  <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit.Analyzers" Version="3.5.0" />
-	<PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-	<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-    <PackageReference Include="coverlet.collector" Version="3.2.0" />
-  </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="NUnit" Version="3.13.3"/>
+		<PackageReference Include="NUnit.Analyzers" Version="3.5.0"/>
+		<PackageReference Include="NUnit3TestAdapter" Version="4.3.1"/>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0"/>
+		<PackageReference Include="coverlet.collector" Version="3.2.0"/>
+	</ItemGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="../TinkState/TinkState.csproj" />
-  </ItemGroup>
+	<ItemGroup>
+		<ProjectReference Include="../TinkState/TinkState.csproj"/>
+	</ItemGroup>
 
 </Project>
