--- a/projects/TinkState-Unity-Test/TinkState-Unity-Test.csproj
+++ b/projects/TinkState-Unity-Test/TinkState-Unity-Test.csproj
@@ -1,34 +1,35 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>net6.0</TargetFramework>
-    <LangVersion>9.0</LangVersion>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>net6.0</TargetFramework>
+		<LangVersion>9.0</LangVersion>
+		<AssemblyName>Nadako.TinkState.Unity.Tests</AssemblyName>
+	</PropertyGroup>
 
 	<PropertyGroup>
-    <EnableDefaultItems>false</EnableDefaultItems>
-  </PropertyGroup>
-
-  <ItemGroup>
-    <Compile Include="../../src/TinkState-Unity/Tests/**/*.cs"/>
-  </ItemGroup>
-
-
-  <ItemGroup>
-    <PackageReference Include="NUnit" Version="3.13.3" />
-    <PackageReference Include="NUnit.Analyzers" Version="3.5.0" />
-		<PackageReference Include="NUnit3TestAdapter" Version="4.3.1" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0" />
-    <PackageReference Include="coverlet.collector" Version="3.2.0" />
-  </ItemGroup>
+		<EnableDefaultItems>false</EnableDefaultItems>
+	</PropertyGroup>
 
 	<ItemGroup>
-    <Reference Include="UnityEngine">
-      <HintPath>../../unity-dlls/UnityEngine.TestRunner.dll</HintPath>
-    </Reference>
-  </ItemGroup>
+		<Compile Include="../../src/TinkState-Unity/Tests/**/*.cs"/>
+	</ItemGroup>
+
 
 	<ItemGroup>
-    <ProjectReference Include="../TinkState-Unity/TinkState-Unity.csproj" />
-  </ItemGroup>
+		<PackageReference Include="NUnit" Version="3.13.3"/>
+		<PackageReference Include="NUnit.Analyzers" Version="3.5.0"/>
+		<PackageReference Include="NUnit3TestAdapter" Version="4.3.1"/>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.4.0"/>
+		<PackageReference Include="coverlet.collector" Version="3.2.0"/>
+	</ItemGroup>
+
+	<ItemGroup>
+		<Reference Include="UnityEngine.TestRunner">
+			<HintPath>../../unity-dlls/UnityEngine.TestRunner.dll</HintPath>
+		</Reference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="../TinkState-Unity/TinkState-Unity.csproj"/>
+	</ItemGroup>
 </Project>
