Add ClearOnDestroyDisposes, add some tests, improve docs a bit.

--- a/projects/TinkState-Unity-Test/TinkState-Unity-Test.csproj
+++ b/projects/TinkState-Unity-Test/TinkState-Unity-Test.csproj
@@ -24,6 +24,9 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<Reference Include="UnityEngine">
+			<HintPath>../../unity-dlls/UnityEngine.dll</HintPath>
+		</Reference>
 		<Reference Include="UnityEngine.TestRunner">
 			<HintPath>../../unity-dlls/UnityEngine.TestRunner.dll</HintPath>
 		</Reference>
