Add batch scheduler implementation for Godot

--- a/docs/articles/toc.yml
+++ b/docs/articles/toc.yml
@@ -49,4 +49,7 @@
   items:
     - name: Binding Lifetime
       href: unity-lifetime-helper.md
-      
+
+- name: Godot Specifics
+  href: Godot.md
+
