--- a/.editorconfig
+++ b/.editorconfig
@@ -1,4 +1,8 @@
 [*]
+charset = utf-8
 indent_style = tab
+indent_size = tab
+tab_width = 4
 trim_trailing_whitespace = true
 end_of_line = lf
+insert_final_newline = true
