don't interrupt the whole scheduled batch if one of the callbacks throws. just log the exception instead (see #38)
also update Unity and add some minor cosmetic changes

--- a/projects/TinkState-Unity-Test/TinkState-Unity-Test.csproj
+++ b/projects/TinkState-Unity-Test/TinkState-Unity-Test.csproj
@@ -24,8 +24,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="UnityEngine">
-			<HintPath>../../unity-dlls/UnityEngine.dll</HintPath>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>../../unity-dlls/UnityEngine.CoreModule.dll</HintPath>
 		</Reference>
 		<Reference Include="UnityEngine.TestRunner">
 			<HintPath>../../unity-dlls/UnityEngine.TestRunner.dll</HintPath>
