--- a/projects/TinkState-Unity/TinkState-Unity.csproj
+++ b/projects/TinkState-Unity/TinkState-Unity.csproj
@@ -15,8 +15,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<Reference Include="UnityEngine">
-			<HintPath>../../unity-dlls/UnityEngine.dll</HintPath>
+		<Reference Include="UnityEngine.CoreModule">
+			<HintPath>../../unity-dlls/UnityEngine.CoreModule.dll</HintPath>
 		</Reference>
 	</ItemGroup>
 
